// Copyright 2021 Danggeun Market Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package daangn.eboolkiq;

option go_package = "github.com/daangn/eboolkiq/pb";
option java_multiple_files = true;
option java_outer_classname = "TaskProto";
option java_package = "com.daangn.eboolkiq";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message Task {
  // id is unique value that identifies the task
  string id = 1;

  // params is the parameter for processing the task.
  google.protobuf.ListValue params = 2;

  // description is the description of the task.
  string description = 3;

  // deadline is the deadline of the task.
  //
  // If task is fetched, the task should be finished before deadline.
  // After the deadline is exceeded, the task is treated as failed.
  google.protobuf.Timestamp deadline = 4;

  // attempt_count is the number of times the task was attempted.
  uint32 attempt_count = 5;
}
